# s3-file-listing-html

./: .gitattributes  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: check.yml
s3_file_listing_html/: __init__.py  __main__.py  constants.py  file_list.py  helpers.py  logger.py  markdown.py  s3.py
s3_file_listing_html/static/css/: file_list.css
s3_file_listing_html/static/js/: file_list.js
s3_file_listing_html/templates/: file_list.html.j2  filelist.html.j2  md.html.j2
